# py2048

./: .gitignore  README.md  pyproject.toml
py2048/: main.py
py2048/module/: board_array.py
test/: test.py
